Changes: - Added ul entry word wrapping in app.css - Changed website metadata to more descriptive title in layout.tsx - Fixed insturctions wording in page.tsx

--- a/app/app.css
+++ b/app/app.css
@@ -48,6 +48,8 @@ body {
     background-color: black;
     border-radius: 8px;
     overflow: auto;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
   }
   
   li {
